deploy/app/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 8080
      targetPort: http
