deploy/app/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: campus
  labels:
    app.kubernetes.io/name: campus
    app.kubernetes.io/component: route
spec:
  parentRefs:
    - name: campus
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: campus-nginx
          port: 80
